# b4b

./: .gitignore  README.md  data_prepare.ipynb  docker-compose.yml  ficaba-test-local.ipynb  ficaba-test-mistral.ipynb  ficaba-test-vertexai.ipynb  ficaba-test.ipynb  pyproject.toml  requirements.txt
