[tool.poetry]
name = "b4b"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
langchain = "^0.1.13"
pandas = "^2.2.1"
dask = {extras = ["complete"], version = "^2024.3.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
